# clipboard-history

./: .gitignore  Cargo.toml  README.md  install-with-cargo-systemd.sh  ringboard.slice  rust-toolchain  test_context_flag.md  uninstall.sh
.github/workflows/: cid.yml
cli/: Cargo.toml  README.md  command-reference-short.golden  command-reference.golden
cli/src/: main.rs
client-sdk/: Cargo.toml  README.md  api.golden
client-sdk/fuzz/: Cargo.toml
client-sdk/fuzz/fuzz_targets/: ui_entry.rs
client-sdk/src/: api.rs  config.rs  duplicate_detection.rs  lib.rs  ring_reader.rs  search.rs  ui_actor.rs
client-sdk/src/watcher_utils/: best_target.rs  deduplication.rs  mod.rs  utils.rs
core/: Cargo.toml  README.md  api.golden
core/src/: dirs.rs  lib.rs  polyfills.rs  protocol.rs  ring.rs  utils.rs  views.rs
cosmic/: Cargo.toml  README.md  build.rs  justfile
cosmic-applet/: .gitignore  Cargo.toml  README.md  build.rs  justfile
cosmic-applet/i18n/en/: clipboard-history-cosmic-applet.ftl  cosmic_applet.ftl
cosmic-applet/resources/: app.desktop  app.metainfo.xml  ringboard-cosmic-applet.desktop
cosmic-applet/src/: app.rs  client.rs  config.rs  dbus.rs  i18n.rs  ipc.rs  logging.rs  main.rs  util.rs
cosmic-applet/src/views/: details.rs  entry.rs  mod.rs  popup.rs  settings.rs
cosmic/i18n/en/: cosmic_applet_template.ftl
cosmic/i18n/nl/: cosmic_applet_template.ftl
cosmic/res/: com.example.CosmicAppletTemplate.desktop  com.example.CosmicAppletTemplate.metainfo.xml
cosmic/resources/: app.metainfo.xml  ringboard-cosmic-applet.desktop
cosmic/src/: app.rs  client.rs  config.rs  i18n.rs  ipc.rs  main.rs
cosmic/src/components/: mod.rs  ring_entry.rs
cosmic/src/core/: localization.rs  mod.rs
cosmic/src/views/: details.rs  main.rs  mod.rs  popup.rs  rings.rs  settings.rs
docs/superpowers/plans/: 2026-05-06-ringboard-gnome-extension-thin-ui.md  2026-05-13-ringboard-server-dbus-interface.md  2026-05-22-extension-binary-clipboard-intake.md
docs/superpowers/specs/: 2026-05-06-ringboard-gnome-extension-thin-ui-design.md  2026-05-13-ringboard-server-dbus-interface-design.md  2026-05-22-extension-binary-clipboard-intake-design.md
egui/: Cargo.toml  README.md  ringboard-egui.desktop
egui/src/: main.rs  startup.rs
gnome-shell/: README.md
gnome-shell/extension/: clipboard-history.pot  confirmDialog.js  dataStructures.js  extension.js  metadata.json  package.json  prefs.js  settingsFields.js  stylesheet.css
gnome-shell/extension/lib/: clipboardIntake.js  dbusClient.js  menuController.js  mimePriority.js  mimePriority.test.mjs  subprocessClient.js
gnome-shell/extension/schemas/: org.gnome.shell.extensions.ringboard.gschema.xml
gnome-shell/extension/tests/: test_subprocess_client.js
gnome-shell/ffi/: Cargo.toml
gnome-shell/ffi/src/: lib.rs
ringboard/: Cargo.toml  api.golden
ringboard/src/: dirs.rs  lib.rs  protocol.rs  ring.rs  utils.rs  views.rs
ringboard/tests/: api.rs
server/: Cargo.toml  README.md  ringboard-server.service
server/src/: allocator.rs  dbus.rs  handler.rs  io_uring.rs  main.rs  path_view.rs  reactor.rs  requests.rs  send_msg_bufs.rs  startup.rs  utils.rs  views.rs
server/tests/: dbus_smoke.rs
tui/: Cargo.toml  README.md
tui/src/: main.rs
watcher-utils/: Cargo.toml  README.md  api.golden
watcher-utils/src/: best_target.rs  deduplication.rs  lib.rs  utils.rs
wayland/: Cargo.toml  README.md  ringboard-wayland.service
wayland-interface-check/: Cargo.toml  README.md
wayland-interface-check/src/: main.rs
wayland/src/: main.rs
x11/: Cargo.toml  README.md  ringboard-x11.service
x11/src/: best_target.rs  deduplication.rs  main.rs
