[workspace]
members = [
    "cli",
    "client-sdk",
    "core",
    "egui",
    "server",
    "tui",
    "x11",
]

[workspace.package]
version = "0.5.4"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
repository = "https://github.com/SUPERCILEX/clipboard-history"
license = "Apache-2.0"

[package]
name = "lint"
version = "0.0.0"
edition.workspace = true
publish = false

[dev-dependencies]
supercilex-tests = { version = "0.4.8", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
debug-assertions = true
strip = false
