[package]
name = "lint"
version = "0.0.0"
publish = false

[package.edition]
workspace = true

[dev-dependencies.supercilex-tests]
version = "0.4.21"
default-features = false

[workspace]
members = [
    "cli",
    "client-sdk",
    "core",
    "cosmic-applet",
    "egui",
    "server",
    "tui",
    "watcher-utils",
    "wayland",
    "wayland-interface-check",
    "x11",
]

[workspace.package]
version = "0.12.2"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/SUPERCILEX/clipboard-history"
edition = "2024"

[profile.dr]
debug = 2
debug-assertions = true
inherits = "release"
strip = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
