[package]
name = "clipboard-history"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI for interfacing with the ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "cli"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
ask = { package = "ask-cli", version = "0.3.0" }
base64 = "0.22.1"
base64-serde = "0.8.0"
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
clap-num = "1.1.1"
dirs = "5.0.1"
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
fuc_engine = "2.2.0"
mime_guess = { version = "2.0.5", default-features = false }
quick-xml = { version = "0.37.0", features = ["serialize"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
regex = "1.11.1"
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["error-stack", "deduplication", "search", "config"] }
rustc-hash = "2.0.0"
rustix = { version = "0.38.40", features = ["stdio", "event"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
toml = { version = "0.8.19", default-features = false, features = ["display"] }

[dev-dependencies]
supercilex-tests = { version = "0.4.11", default-features = false, features = ["clap"] }

[[bin]]
name = "ringboard"
path = "src/main.rs"
