[package]
name = "clipboard-history"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI for interfacing with the ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "cli"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
ask = { package = "ask-cli", version = "0.3.0" }
base64 = "0.22.1"
base64-serde = "0.8.0"
clap = { version = "4.5.38", features = ["derive", "wrap_help"] }
clap-num = "1.2.0"
dirs = "6.0.0"
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
fuc_engine = "3.1.0"
mime_guess = { version = "2.0.5", default-features = false }
quick-xml = { version = "0.37.5", features = ["serialize"] }
rand = { version = "0.9.1", default-features = false, features = ["std"] }
rand_distr = "0.5.1"
rand_xoshiro = "0.7.0"
regex = "1.11.1"
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["error-stack", "deduplication", "search", "config"] }
rustc-hash = "2.1.1"
rustix = { version = "1.0.7", features = ["stdio", "event"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = { version = "0.8.22", default-features = false, features = ["display"] }

[dev-dependencies]
supercilex-tests = { version = "0.4.17", default-features = false, features = ["clap"] }

[[bin]]
name = "ringboard"
path = "src/main.rs"
