[package]
name = "clipboard-history-client-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "API bindings to the ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "sdk"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
error-stack = { version = "0.5.0", default-features = false, optional = true }
image = { version = "0.25.6", optional = true }
lockness-bags = { path = "/home/asaveau/Desktop/wip/lockness/bags", optional = true }
lockness-executor = { path = "/home/asaveau/Desktop/wip/lockness/executor", optional = true }
memchr = { version = "2.7.5", optional = true }
regex = { version = "1.11.1", optional = true }
ringboard-core = { package = "clipboard-history-core", version = "0", path = "../core" }
rustc-hash = { version = "2.1.1", optional = true }
rustix = { version = "1.0.8", features = ["net", "fs", "thread"] }
serde = { version = "1.0.219", features = ["derive"], optional = true }
smallvec = { version = "2.0.0-alpha.11", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
supercilex-tests = { version = "0.4.21", default-features = false, features = ["api"] }

[features]
error-stack = ["dep:error-stack", "ringboard-core/error-stack"]
deduplication = ["dep:rustc-hash", "dep:smallvec"]
search = ["dep:memchr", "dep:regex", "dep:lockness-bags", "dep:lockness-executor"]
ui = ["search", "dep:image", "dep:rustc-hash"]
config = ["dep:serde"]
