[package]
name = "clipboard-history-client-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "API bindings to the ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "sdk"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
crossbeam-channel = "0.5.15"
error-stack = { version = "0.6.0", default-features = false, optional = true }
image = { version = "0.25.9", optional = true }
log = { version = "0.4.29", default-features = false, optional = true }
memchr = { version = "2.7.6", optional = true }
regex = { version = "1.12.2", optional = true }
ringboard-core = { package = "clipboard-history-core", version = "0", path = "../core" }
rustc-hash = { version = "2.1.1", optional = true }
rustix = { version = "1.1.3", features = ["net", "fs", "thread"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
smallvec = { version = "2.0.0-alpha.12", optional = true }
stable-type = "0.1.0"
thiserror = "2.0.18"

[dev-dependencies]
supercilex-tests = { version = "0.4.21", default-features = false, features = ["api"] }

[features]
error-stack = ["dep:error-stack", "ringboard-core/error-stack"]
deduplication = ["dep:rustc-hash", "dep:smallvec"]
search = ["dep:memchr", "dep:regex"]
ui = ["search", "dep:image", "dep:rustc-hash"]
config = ["dep:serde"]
watcher-utils = ["dep:log", "dep:rustc-hash"]
