[package]
name = "clipboard-history-client-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "API bindings to the ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "sdk"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
crossbeam-channel = "0.5.15"
error-stack = { version = "0.7.0", default-features = false, optional = true }
image = { version = "0.25.10", optional = true }
log = { version = "0.4.29", default-features = false }
memchr = { version = "2.8.0", optional = true }
regex = { version = "1.12.3", optional = true }
ringboard-core = { package = "clipboard-history-core", version = "0", path = "../core" }
rustc-hash = { version = "2.1.2", optional = true }
rustix = { version = "1.1.4", features = ["net", "fs", "thread"] }
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "2.0.0-alpha.12", optional = true }
stable-type = "0.1.1"
thiserror = "2.0.18"
toml = { version = "1.1.2", default-features = false, features = ["serde", "parse"] }

[dev-dependencies]
supercilex-tests = { version = "0.4.22", default-features = false, features = ["api"] }

[features]
error-stack = ["dep:error-stack", "ringboard-core/error-stack"]
deduplication = ["dep:rustc-hash", "dep:smallvec"]
search = ["dep:memchr", "dep:regex"]
ui = ["search", "dep:image", "dep:rustc-hash"]
watcher-utils = ["dep:rustc-hash"]
