[package]
name = "clipboard-history-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The ringboard core library."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "core"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
dirs = "6.0.0"
error-stack = { version = "0.5.0", default-features = false, optional = true }
itoa = "1.0.14"
rustix = { version = "0.38.44", features = ["fs", "mm", "process", "net", "event", "itoa", "linux_latest"] }
thiserror = "2.0.11"

[dev-dependencies]
supercilex-tests = { version = "0.4.15", default-features = false, features = ["api"] }
