[package]
name = "clipboard-history-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The ringboard core library."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "core"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
dirs = "6.0.0"
error-stack = { version = "0.6.0", default-features = false, optional = true }
itoa = "1.0.17"
rustix = { version = "1.1.3", features = ["fs", "mm", "process", "net", "event", "linux_latest"] }
thiserror = "2.0.18"

[dev-dependencies]
supercilex-tests = { version = "0.4.21", default-features = false, features = ["api"] }
