[package]
name = "clipboard-history-cosmic-applet"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "This applet is a Ringboard client that provides direkt integration with the Cosmic Desktop"
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "cosmic"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
constcat = "0.6.1"
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["ui"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
zbus = { version = "5.12.0", default-features = false, features = ["tokio", "async-io"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Add Wayland support to winit
    "wayland",
    "applet",
]
