[package]
name = "clipboard-history-cosmic"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Ringboard COSMIC Desktop client application."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "cosmic"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true
# We can't publish this crate until libcosmic becomes available on crates.io
publish = false

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = ["applet", "wgpu"] }
notify = "8.2.0"
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["ui"] }
rust-embed = "8.8.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"

[[bin]]
name = "ringboard-cosmic"
path = "src/main.rs"
