[package]
name = "clipboard-history-egui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Ringboard egui client application."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "egui"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
eframe = { version = "0.32.1", default-features = false, features = ["glow"] }
font-kit = { version = "0.14.3", optional = true }
image = "0.25.6"
itoa = "1.0.15"
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["ui"] }
rustc-hash = "2.1.1"
rustix = { version = "1.0.8", features = ["fs"] }
tracy-client = { version = "0.18.2", optional = true }

[features]
default = ["x11", "wayland"]
trace = ["dep:tracy-client"]
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]
system-fonts = ["font-kit"]

[[bin]]
name = "ringboard-egui"
path = "src/main.rs"
