[package]
name = "clipboard-history-egui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Ringboard egui client application."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "egui"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
dirs = "6.0.0"
eframe = { version = "0.34.1", default-features = false, features = ["glow"] }
font-kit = { version = "0.14.3", optional = true }
image = "0.25.10"
itoa = "1.0.18"
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["ui"] }
rustc-hash = "2.1.2"
rustix = { version = "1.1.4", features = ["fs"] }
tracy-client = { version = "0.18.4", optional = true }

[features]
default = ["x11", "wayland"]
trace = ["dep:tracy-client"]
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]
system-fonts = ["font-kit"]

# This should be removed once the image crate supports avif decoding by default
avif = ["image/avif-native"]

[[bin]]
name = "ringboard-egui"
path = "src/main.rs"
