[package]
name = "clipboard-history-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "server"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.4"
bitcode = { version = "0.6.0", features = ["arrayvec"] }
bitvec = "1.0.1"
env_logger = { version = "0.11.3", default-features = false }
error-stack = "0.4.1"
io-uring = { version = "0.6.2", path = "/home/asaveau/Desktop/wip/io-uring" }
libc = "0.2.155"
log = { version = "0.4.21", features = ["release_max_level_info"] }
ringboard-core = { package = "clipboard-history-core", version = "0", path = "../ringboard" }
rustix = { version = "0.38.34", features = ["fs", "process", "net"] }
sd-notify = { version = "0.4.1", optional = true }
thiserror = "1.0.61"

[features]
default = ["human-logs"]
systemd = ["dep:sd-notify"]
human-logs = ["env_logger/default"]

[[bin]]
name = "ringboard-server"
path = "src/main.rs"
