[package]
name = "clipboard-history-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "server"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license = "AGPL-3.0-only"

[dependencies]
arrayvec = "0.7.4"
bitcode = { version = "0.6.3", features = ["arrayvec"] }
bitvec = "1.0.1"
env_logger = { version = "0.11.5", default-features = false }
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
io-uring = "0.6.4"
libc = "0.2.155"
log = { version = "0.4.22", features = ["release_max_level_info"] }
ringboard-core = { package = "clipboard-history-core", version = "0", path = "../core" }
rustix = { version = "0.38.34", features = ["fs", "process", "net", "io_uring"] }
sd-notify = { version = "0.4.2", optional = true }
thiserror = "1.0.63"

[features]
default = ["human-logs"]
systemd = ["dep:sd-notify"]
human-logs = ["env_logger/default"]

[[bin]]
name = "ringboard-server"
path = "src/main.rs"
