[package]
name = "clipboard-history-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The ringboard server."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "server"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license = "AGPL-3.0-only"

[dependencies]
arrayvec = "0.7.6"
bitcode = { version = "0.6.5", features = ["arrayvec"] }
bitvec = "1.0.1"
env_logger = { version = "0.11.7", default-features = false }
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
io-uring = "0.7.4"
libc = "0.2.171"
log = { version = "0.4.26", features = ["release_max_level_info"] }
ringboard-core = { package = "clipboard-history-core", version = "0", path = "../core", features = ["error-stack"] }
rustix = { version = "1.0.2", features = ["fs", "process", "net", "io_uring"] }
sd-notify = { version = "0.4.5", optional = true }
smallvec = "2.0.0-alpha.10"
thiserror = "2.0.12"
tracy-client = { version = "0.18.0", optional = true }

[features]
default = ["systemd", "human-logs"]
systemd = ["dep:sd-notify"]
human-logs = ["env_logger/default"]
trace = ["dep:tracy-client"]

[[bin]]
name = "ringboard-server"
path = "src/main.rs"
