[package]
name = "clipboard-history-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Ringboard ratatui client application."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "ratatui"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
ratatui = "0.29.0"
ratatui-image = { version = "8.0.1", features = ["crossterm"] }
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["error-stack", "ui"] }
rustix = { version = "1.0.8", features = ["stdio"] }
thiserror = "2.0.12"
tracy-client = { version = "0.18.2", optional = true }
tui-textarea = "0.7.0"

[features]
trace = ["dep:tracy-client"]

[[bin]]
name = "ringboard-tui"
path = "src/main.rs"
