[package]
name = "clipboard-history-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Ringboard ratatui client application."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "ratatui"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
error-stack = { version = "0.6.0", default-features = false, features = ["std"] }
image = "0.25.9"
ratatui = "0.29.0"
ratatui-image = { version = "8.0.2", features = ["crossterm"] }
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["error-stack", "ui"] }
rustix = { version = "1.1.2", features = ["stdio"] }
thiserror = "2.0.17"
tracy-client = { version = "0.18.3", optional = true }
tui-textarea = "0.7.0"

[features]
trace = ["dep:tracy-client"]

[[bin]]
name = "ringboard-tui"
path = "src/main.rs"
