[package]
name = "clipboard-history-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Ringboard ratatui client application."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "ratatui"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
error-stack = { version = "0.6.0", default-features = false, features = ["std"] }
image = "0.25.9"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-image = "10.0.2"
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["error-stack", "ui"] }
rustix = { version = "1.1.3", features = ["stdio"] }
thiserror = "2.0.18"
tracy-client = { version = "0.18.4", optional = true }
tui-input = "0.15.0"

[features]
trace = ["dep:tracy-client"]

[[bin]]
name = "ringboard-tui"
path = "src/main.rs"
