[package]
name = "clipboard-history-watcher-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared utilities between ringboard watchers."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "sdk"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
log = { version = "0.4.22", default-features = false }
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk" }
rustc-hash = "2.1.0"
rustix = { version = "0.38.42", features = ["fs"] }

[dev-dependencies]
supercilex-tests = { version = "0.4.11", default-features = false, features = ["api"] }
