[package]
name = "clipboard-history-watcher-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared utilities between ringboard watchers."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "sdk"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
log = { version = "0.4.26", default-features = false }
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk" }
rustc-hash = "2.1.1"
rustix = { version = "0.38.44", features = ["fs"] }

[dev-dependencies]
supercilex-tests = { version = "0.4.15", default-features = false, features = ["api"] }
