[package]
name = "wayland-interface-check"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Binary to answer the question, \"Is this Wayland interface available?\""
repository.workspace = true
keywords = ["tools", "wayland", "cli"]
categories = ["command-line-utilities", "development-tools"]
license.workspace = true

[dependencies]
rustc-hash = "2.1.1"
wayland-client = "0.31.10"
