[package]
name = "clipboard-history-x11"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "X11 Ringboard clipboard listener."
repository.workspace = true
keywords = ["ringboard", "clipboard", "tools", "x11"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
arrayvec = "0.7.6"
env_logger = { version = "0.11.8", default-features = false }
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
log = { version = "0.4.27", features = ["release_max_level_info"] }
ringboard-sdk = { package = "clipboard-history-client-sdk", version = "0", path = "../client-sdk", features = ["error-stack", "config", "watcher-utils"] }
rustix = { version = "1.0.8", features = ["fs", "time"] }
thiserror = "2.0.15"
toml = { version = "0.9.5", default-features = false, features = ["serde", "parse"] }
x11rb = { version = "0.13.1", features = ["xfixes", "xtest"] }

[features]
default = ["human-logs"]
human-logs = ["env_logger/default"]

[[bin]]
name = "ringboard-x11"
path = "src/main.rs"
